Add PostgreSQL configuration options and documentation links to README

--- a/k8s/base/databases/pg-cluster.yml
+++ b/k8s/base/databases/pg-cluster.yml
@@ -11,5 +11,7 @@ spec:
     initdb:
       database: app
       owner: app
+      dataChecksums: true
+      encoding: UTF8
       secret:
         name: database-creds
