--- a/k8s/base/databases/pg-cluster.yml
+++ b/k8s/base/databases/pg-cluster.yml
@@ -6,7 +6,7 @@ spec:
   instances: 3
   imageName: ghcr.io/cloudnative-pg/postgresql:17.0
   storage:
-    size: 1Gi
+    size: 2Gi
   bootstrap:
     initdb:
       database: app
@@ -15,3 +15,11 @@ spec:
       encoding: UTF8
       secret:
         name: database-creds
+  backup:
+    retentionPolicy: 7d
+    volumeSnapshot:
+      className: standard
+  affinity:
+    enablePodAntiAffinity: true
+    topologyKey: kubernetes.io/hostname
+    podAntiAffinityType: preferred
